--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ body, td {
 		<TR>
 			<TD BACKGROUND="fade.gif">
 				&middot;
-					<A HREF="playvalorant.com/en-us/index.html">
+					<A HREF="home/en-us/index.html">
 						
 					</A>		
 			</TD>
@@ -56,7 +56,7 @@ body, td {
 	</H6>
 	<!-- Mirror and index made by HTTrack Website Copier/3.49-2 [XR&CO'2014] -->
 	<!-- Thanks for using HTTrack Website Copier! -->
-	<meta HTTP-EQUIV="Refresh" CONTENT="0; URL=playvalorant.com/en-us/index.html">
+	<meta HTTP-EQUIV="Refresh" CONTENT="0; URL=home/en-us/index.html">
 
 
 <!-- ==================== Start epilogue ==================== -->
