--- a/home/en-us/index.html
+++ b/home/en-us/index.html
@@ -157,7 +157,7 @@
       <div class="row">
         <div class="col-md-8 col-md-offset-2">
           <div class="brand">
-            <h1>𝕾𝖕𝖊𝖆𝖗
+            <h1>!ᖴOᑕᕼ☆
               <div class="pro-badge">
                 +
               </div>
