--- a/home/en-us/index.html
+++ b/home/en-us/index.html
@@ -7,7 +7,7 @@
   <link rel="icon" type="image/png" href="assets/img/favicon.png">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
-  <title>𝕾𝖕𝖊𝖆𝖗 design !!</title>
+  <title>Munif Para</title>
 
   <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
 
@@ -157,13 +157,13 @@
       <div class="row">
         <div class="col-md-8 col-md-offset-2">
           <div class="brand">
-            <h1>!ᖴOᑕᕼ☆
+            <h1>Munif Assignment
               <div class="pro-badge">
                 +
               </div>
             </h1>
 
-            <h3 class="title">Welcome to my web .<br> Do you need any kind of design ??</h3>
+            <h3 class="title">I sell assignment for money !(নবম - দশম)</h3>
           </div>
         </div>
       </div>
