--- a/home/en-us/index.html
+++ b/home/en-us/index.html
@@ -80,7 +80,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="https://discord.gg/yw8MYUV">Chat</a>
+            <a class="navbar-brand" href="https://www.facebook.com/ahkamul.hoq">Chat</a>
           </div>
 
           <div class="navbar-collapse">
@@ -143,7 +143,7 @@
           </li>
 
           <li>
-            <a href="https://discord.gg/yw8MYUV" target="_blank" class="btn btn-rose btn-round">
+            <a href="https://www.facebook.com/ahkamul.hoq" target="_blank" class="btn btn-rose btn-round">
               <i class="material-icons">shopping_cart</i> Get Now
             </a>
           </li>
@@ -172,7 +172,7 @@
 
   <footer class="footer footer-white">
     <div class="container">
-      <a class="footer-brand" href="https://discord.gg/yw8MYUV">𝕾𝖕𝖊𝖆𝖗</a>
+      <a class="footer-brand" href="https://www.facebook.com/ahkamul.hoq">Taka</a>
 
       <ul class="social-buttons pull-right">
         <li>
@@ -268,7 +268,7 @@
           <div class="col-md-12">
             <h4 class="title">HERE</h4>
           </div>
-            <a href="https://discord.gg/yw8MYUV" id="" class="btn btn-twitter btn-round">
+            <a href="https://www.facebook.com/ahkamul.hoq" id="" class="btn btn-twitter btn-round">
               <i class="fa fa-twitter"></i> dISCORD
             </a>
             <a href="https://www.facebook.com/profile.php?id=100026939615049" id="facebook " class="btn btn-facebook btn-round">
@@ -323,7 +323,7 @@
         heading-03 en CopyContent-module--title--1fNiv 
         SlideUpTitle-module--slideUpTitle--3OLqo 
         
-        "><span>The maps</span></h2><h5 class="heading-05 CopyContent-module--subtitle--3Yej_">𝕾𝖕𝖊𝖆𝖗 shop !</h5><p class="copy-02 CopyContent-module--description--UF3p9"><span>Get any design from 𝕾𝖕𝖊𝖆𝖗 shop !<br>🎇Available items<br>➮Website<br>➮Logo & GIF<br>➮Thumbnail & banner<br>➮Custom Design</span></p><a class="button CopyContent-module--button--LR7-Q PrimaryButton-module--red--1EPFx PrimaryButton-module--borderDark--3AUaI PrimaryButton-module--primaryButton--2ec0w " href="https://discord.gg/yw8MYUV"><div class="PrimaryButton-module--label--3gc3A"><span class="PrimaryButton-module--hover-mask--2oPWv PrimaryButton-module--default--2alKM"></span><span class="PrimaryButton-module--label-text--23ce5">All works </span></div></a></div></div></section><h5 class="heading-05 SocialFindUs-module--title--3RPPk">Find us on</h5></div>
+        "><span>The maps</span></h2><h5 class="heading-05 CopyContent-module--subtitle--3Yej_">𝕾𝖕𝖊𝖆𝖗 shop !</h5><p class="copy-02 CopyContent-module--description--UF3p9"><span>Get any design from 𝕾𝖕𝖊𝖆𝖗 shop !<br>🎇Available items<br>➮Website<br>➮Logo & GIF<br>➮Thumbnail & banner<br>➮Custom Design</span></p><a class="button CopyContent-module--button--LR7-Q PrimaryButton-module--red--1EPFx PrimaryButton-module--borderDark--3AUaI PrimaryButton-module--primaryButton--2ec0w " href="https://www.facebook.com/ahkamul.hoq"><div class="PrimaryButton-module--label--3gc3A"><span class="PrimaryButton-module--hover-mask--2oPWv PrimaryButton-module--default--2alKM"></span><span class="PrimaryButton-module--label-text--23ce5">All works </span></div></a></div></div></section><h5 class="heading-05 SocialFindUs-module--title--3RPPk">Find us on</h5></div>
 
 
         <div id="gatsby-announcer" style="position:absolute;top:0;width:1px;height:1px;padding:0;overflow:hidden;clip:rect(0, 0, 0, 0);white-space:nowrap;border:0" aria-live="assertive" aria-atomic="true"></div></div><script id="gatsby-script-loader">/*<![CDATA[*/window.pagePath="";/*]]>*/</script>
@@ -473,7 +473,7 @@
                       <li><b>Vector</b> Files</li>
                       <li>Pro<b> Documentation</b></li>
                     </ul>
-                    <a href="https://discord.gg/yw8MYUV" class="btn btn-rose btn-round">
+                    <a href="https://www.facebook.com/ahkamul.hoq" class="btn btn-rose btn-round">
                       Get Now
                     </a>
                   </div>
@@ -493,7 +493,7 @@
                       <li><b>+ Photoshop</b> Files</b></li>
                       <li><b>+ Main</b> on Layers</li>
                     </ul>
-                    <a href="https://discord.gg/yw8MYUV" class="btn btn-rose btn-round">
+                    <a href="https://www.facebook.com/ahkamul.hoq" class="btn btn-rose btn-round">
                       Get Now!
                     </a>
                   </div>
@@ -518,7 +518,7 @@
                       <li><b>Responsive</b> Design</li>
                       <li>Product<b> Documentation</b></li>
                     </ul>
-                    <a href="https://discord.gg/yw8MYUV" class="btn btn-rose btn-round">
+                    <a href="https://www.facebook.com/ahkamul.hoq" class="btn btn-rose btn-round">
                       Get Now!
                     </a>
                   </div>
@@ -530,7 +530,7 @@
                   <div class="card-content">
                     <h6 class="category">Free</h6>
                     <h1 class="card-title"><small>$</small>Discord or facebook</h1>
-                    <a href="https://discord.gg/yw8MYUV" class="btn btn-rose btn-round">
+                    <a href="https://www.facebook.com/ahkamul.hoq" class="btn btn-rose btn-round">
                       Get Now!
                     </a>
                   </div>
@@ -556,9 +556,9 @@
       <div class="container">
         <div class="row">
           <div class="col-md-12">
-            <h4 class="title">https://discord.gg/yw8MYUV</h4>
+            <h4 class="title">https://www.facebook.com/ahkamul.hoq</h4>
           </div>
-            <a href="https://discord.gg/yw8MYUV" id="" class="btn btn-twitter btn-round">
+            <a href="https://www.facebook.com/ahkamul.hoq" id="" class="btn btn-twitter btn-round">
               <i class="fa fa-twitter"></i> dISCORD
             </a>
             <a href="https://www.facebook.com/profile.php?id=100026939615049" id="facebook "class="btn btn-facebook btn-round">
@@ -582,17 +582,17 @@
       <ul class="pull-center">
 
         <li>
-          <a href="https://discord.gg/yw8MYUV" target="_blank">
+          <a href="https://www.facebook.com/ahkamul.hoq" target="_blank">
              My server
           </a>
         </li>
         <li>
-          <a href="https://discord.gg/yw8MYUV" target="_blank">
+          <a href="https://www.facebook.com/ahkamul.hoq" target="_blank">
              chat
           </a>
         </li>
         <li>
-          <a href="https://discord.gg/yw8MYUV" target="_blank">
+          <a href="https://www.facebook.com/ahkamul.hoq" target="_blank">
             Licenses
           </a>
         </li>
@@ -600,17 +600,17 @@
 
       <ul class="social-buttons pull-right">
         <li>
-          <a href="https://discord.gg/yw8MYUV" target="_blank" class="btn btn-just-icon btn-simple btn-twitter">
+          <a href="https://www.facebook.com/ahkamul.hoq" target="_blank" class="btn btn-just-icon btn-simple btn-twitter">
             <i class="fa fa-facebook"></i>
           </a>
         </li>
         <li>
-          <a href="https://discord.gg/yw8MYUV" target="_blank" class="btn btn-just-icon btn-simple btn-dribbble">
+          <a href="https://www.facebook.com/ahkamul.hoq" target="_blank" class="btn btn-just-icon btn-simple btn-dribbble">
             <i class="fa fa-dribbble"></i>
           </a>
         </li>
         <li>
-          <a href="https://discord.gg/yw8MYUV" target="_blank" class="btn btn-just-icon btn-simple btn-instagram">
+          <a href="https://www.facebook.com/ahkamul.hoq" target="_blank" class="btn btn-just-icon btn-simple btn-instagram">
             <i class="fa fa-instagram"></i>
           </a>
         </li>
