--- a/home/en-us/index.html
+++ b/home/en-us/index.html
@@ -323,7 +323,7 @@
         heading-03 en CopyContent-module--title--1fNiv 
         SlideUpTitle-module--slideUpTitle--3OLqo 
         
-        "><span>The maps</span></h2><h5 class="heading-05 CopyContent-module--subtitle--3Yej_">𝕾𝖕𝖊𝖆𝖗 shop !</h5><p class="copy-02 CopyContent-module--description--UF3p9"><span>Get any design from 𝕾𝖕𝖊𝖆𝖗 shop !<br>🎇Available items<br>➮Website<br>➮Logo & GIF<br>➮Thumbnail & banner<br>➮Custom Design</span></p><a class="button CopyContent-module--button--LR7-Q PrimaryButton-module--red--1EPFx PrimaryButton-module--borderDark--3AUaI PrimaryButton-module--primaryButton--2ec0w " href="https://www.facebook.com/ahkamul.hoq"><div class="PrimaryButton-module--label--3gc3A"><span class="PrimaryButton-module--hover-mask--2oPWv PrimaryButton-module--default--2alKM"></span><span class="PrimaryButton-module--label-text--23ce5">All works </span></div></a></div></div></section><h5 class="heading-05 SocialFindUs-module--title--3RPPk">Find us on</h5></div>
+        "><span>The maps</span></h2><h5 class="heading-05 CopyContent-module--subtitle--3Yej_">MUNIF Shop</h5><p class="copy-02 CopyContent-module--description--UF3p9"><span>Get any design from 𝕾𝖕𝖊𝖆𝖗 shop !<br>🎇Available items<br>➮Website<br>➮Logo & GIF<br>➮Thumbnail & banner<br>➮Custom Design</span></p><a class="button CopyContent-module--button--LR7-Q PrimaryButton-module--red--1EPFx PrimaryButton-module--borderDark--3AUaI PrimaryButton-module--primaryButton--2ec0w " href="https://www.facebook.com/ahkamul.hoq"><div class="PrimaryButton-module--label--3gc3A"><span class="PrimaryButton-module--hover-mask--2oPWv PrimaryButton-module--default--2alKM"></span><span class="PrimaryButton-module--label-text--23ce5">All works </span></div></a></div></div></section><h5 class="heading-05 SocialFindUs-module--title--3RPPk">Find us on</h5></div>
 
 
         <div id="gatsby-announcer" style="position:absolute;top:0;width:1px;height:1px;padding:0;overflow:hidden;clip:rect(0, 0, 0, 0);white-space:nowrap;border:0" aria-live="assertive" aria-atomic="true"></div></div><script id="gatsby-script-loader">/*<![CDATA[*/window.pagePath="";/*]]>*/</script>
@@ -363,7 +363,7 @@
                     <h4 class="card-title">Khaldi Yass</h4>
 
                     <p class="card-description">
-                      "Thanks 𝕾𝖕𝖊𝖆𝖗 for making my logo for free !!"
+                      "Joss Asinment !!"
                     </p>
                   </div>
                 </div>
@@ -405,7 +405,7 @@
                     <h4 class="card-title">aFegfdvzs</h4>
 
                     <p class="card-description">
-                      "Damn 𝕾𝖕𝖊𝖆𝖗!!! OP vai
+                      "Damn Munif
                     </p>
                   </div>
                 </div>
@@ -577,7 +577,7 @@
 
   <footer class="footer footer-white">
     <div class="container">
-      <a class="footer-brand" href="https://discord.gg/E4Rntv">𝕾𝖕𝖊𝖆𝖗</a>
+      <a class="footer-brand" href="https://discord.gg/E4Rntv">Anis Vai</a>
 
       <ul class="pull-center">
 
