--- a/home/en-us/index.html
+++ b/home/en-us/index.html
@@ -360,7 +360,7 @@
                 </div>
                 <div class="col-md-9">
                   <div class="card-content">
-                    <h4 class="card-title">Khaldi Yass</h4>
+                    <h4 class="card-title">Sunny Leone</h4>
 
                     <p class="card-description">
                       "Joss Asinment !!"
@@ -381,10 +381,10 @@
                 </div>
                 <div class="col-md-9">
                   <div class="card-content">
-                    <h4 class="card-title">Rakib X</h4>
+                    <h4 class="card-title">Asif Kondokar</h4>
 
                     <p class="card-description">
-                      "I need a web also !"
+                      "amar o ata lagbo !"
                     </p>
                   </div>
                 </div>
